# ns-mcp-prroxy

./: README.md  nordstellar_remote_mcp_proxy.py  pyproject.toml
templates/: login-error.html  login-success.html
